# dodot

./: .copier-answers.ai-assistant.yml.jinja.jinja  .envrc  .gitignore  .goreleaser.yml  .info  .release-sync-state.yaml  .release-sync.yaml  .shipit.toml  .todo  .todos  404.html  CHANGELOG.md  CHANGELOG_UNRELEASED.md  CLAUDE.md  CNAME  Cargo.toml  Dockerfile.deb-test  GEMINI.md  README.md  README.md.jinja  REFACTORING.md  REMOVAL_REFACTORING.md  claude.sh  cover.out  coverage-results-current.txt  coverage.out  dependency_analysis.md  go.mod  go.sum  index.html  lefthook.yml  mkdocs.yml  pack-command-result-analysis.md  pack_structure_analysis.md  package-lock.json  pixi.toml  pr_description.md  refactoring_sequence.md  refactoring_summary.md  sample-status.sh  (+4 more)
.claude/: CLAUDE.md
.copier/: copier.yml
.github/: copilot-instructions.md  homebrew-formula.rb.tmpl  pull_request_template.md
CHANGELOG/: 5.1.0.md  5.2.0.md  legacy.md  unreleased-fix-ignored-pack-output.md  unreleased-handler-trait-unit-tests.md  unreleased-migrate-changelog-fragment.md  unreleased-pre-migration-unreleased.md  unreleased-release-v3.md  unreleased-shipit-release-cutover.md  unreleased-skills-using-dodot.md
app-bin/: demo-errors  e2e
configs/: default.yaml
crates/dodot-cli/: Cargo.toml
crates/dodot-cli/src/: handlers.rs  help.rs  interactive.rs  logging.rs  main.rs  tutorial.rs
crates/dodot-cli/src/help/: addignore.txt  adopt.txt  config.txt  dodot.txt  down.txt  fill.txt  git-install-filters.txt  git-show-filters.txt  init-sh.txt  init.txt  list.txt  plist.txt  probe-app.txt  probe-deployment-map.txt  probe-shell-init.txt  probe-show-data-dir.txt  probe.txt  prompts.txt  status.txt  tutorial.txt  up.txt
crates/dodot-cli/src/styles/: dodot.css
crates/dodot-cli/src/templates/: config.jinja  list.jinja  pack-status.jinja
crates/dodot-lib/: Cargo.toml
crates/dodot-lib/src/: conflicts.rs  equivalence.rs  error.rs  lib.rs
crates/dodot-lib/src/commands/: addignore.rs  adopt.rs  down.rs  fill.rs  genconfig.rs  git_alias.rs  git_filters.rs  init.rs  list.rs  mod.rs  probe.rs  prompts.rs  refresh.rs  secret.rs  status.rs  template_clean.rs  template_install_filter.rs  tests.rs  transform.rs  tutorial.rs  up.rs
crates/dodot-lib/src/commands/adopt/: infer.rs  mod.rs
crates/dodot-lib/src/commands/probe/: mod.rs  render.rs  shell_init.rs  types.rs
crates/dodot-lib/src/commands/tests/: adopt.rs  gating.rs  mod.rs  probe.rs  support.rs
crates/dodot-lib/src/commands/transform/: install_hook.rs  mod.rs  test_support.rs
crates/dodot-lib/src/config/: mod.rs
crates/dodot-lib/src/datastore/: filesystem.rs  mod.rs
crates/dodot-lib/src/execution/: fetch.rs  link.rs  mod.rs  run.rs  stage.rs  test_support.rs
crates/dodot-lib/src/fs/: mod.rs  os.rs
crates/dodot-lib/src/gates/: mod.rs
crates/dodot-lib/src/handlers/: externals.rs  filter.rs  gate.rs  homebrew.rs  install.rs  mod.rs  nix.rs  path.rs  run_once.rs  shell.rs  symlink.rs
crates/dodot-lib/src/handlers/symlink/: mod.rs
crates/dodot-lib/src/handlers/symlink/tests/: cascade.rs  integration.rs  mod.rs
crates/dodot-lib/src/operations/: mod.rs
crates/dodot-lib/src/packs/: context.rs  mod.rs  orchestration.rs  types.rs
crates/dodot-lib/src/packs/orchestration/: mod.rs  planning.rs  resolve.rs  test_support.rs
crates/dodot-lib/src/paths/: mod.rs
crates/dodot-lib/src/plists/: mod.rs
crates/dodot-lib/src/preprocessing/: age.rs  baseline.rs  conflict.rs  divergence.rs  gpg.rs  identity.rs  mod.rs  no_reverse.rs  pipeline.rs  reverse_merge.rs  template.rs  unarchive.rs
crates/dodot-lib/src/preprocessing/pipeline/: mod.rs
crates/dodot-lib/src/preprocessing/pipeline/tests/: baseline.rs  conflict_marker.rs  divergence.rs  mod.rs  path_traversal.rs
crates/dodot-lib/src/preprocessing/template/: mod.rs  secrets.rs
crates/dodot-lib/src/probe/: brew.rs  cfprefsd_marker.rs  data_dir_tree.rs  deployment_map.rs  last_up.rs  macos_native.rs  mod.rs  shell_init.rs
crates/dodot-lib/src/prompts/: catalog.rs  mod.rs
crates/dodot-lib/src/render/: mod.rs
crates/dodot-lib/src/rules/: grouping.rs  mod.rs  pattern.rs  scanner.rs  types.rs
crates/dodot-lib/src/rules/scanner/: mod.rs
crates/dodot-lib/src/rules/scanner/tests/: dir_gates.rs  gates.rs  mapping_gates.rs  mod.rs
crates/dodot-lib/src/secret/: bw.rs  error_render.rs  keychain.rs  mod.rs  op.rs  pass.rs  provider.rs  registry.rs  secret_string.rs  secret_tool.rs  sops.rs  test_support.rs
crates/dodot-lib/src/shell/: mod.rs  validate.rs
crates/dodot-lib/src/templates/: git-filters.jinja  git-install-alias.jinja  git-show-alias.jinja  message.jinja  pack-status.jinja  probe.jinja  prompts-list.jinja  refresh.jinja  secret-list.jinja  secret-probe.jinja  template-install-filter.jinja  transform-check.jinja  transform-install-hook.jinja  transform-status.jinja
crates/dodot-lib/src/templates/tutorial/: annotate_status.jinja  check_root.jinja  concept_shell.jinja  concept_targets.jinja  dry_run.jinja  intro.jinja  no_packs.jinja  outro.jinja  pick_pack.jinja  real_up.jinja  show_status.jinja
crates/dodot-lib/src/testing/: mod.rs
docs/: .info  CNAME  index.lex  requirements.txt  v2-migration.md
internal/: doc.go
live-testing/: README.txt
scripts/: build  build-all  coverage-summary  demo-errors  diff-since-release  e2e  gen-completion  gen-manpage  go-coverage  go-diff-stat-no-test  golang-cloc  lint  pre-commit  release  release-new  rename-deploy-to-link.sh  rename-off-to-unlink.sh  (+11 more)
(+1566 files in other folders)
