[package]
name = "dodot-lib"
version = "0.9.1"
edition = "2021"
license = "MIT"
description = "Core library for dodot dotfiles manager"
repository = "https://github.com/arthur-debert/dodot"

[dependencies]
clapfig = "0.16"
confique = "0.4"
glob = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
standout-render = "7.1"
tempfile = { version = "3", optional = true }
thiserror = "2"
toml = "0.8"

[dev-dependencies]
tempfile = "3"

[features]
default = []
test-utils = ["tempfile"]
